--- a/calculator-app-main/index.html
+++ b/calculator-app-main/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="stylesheet" href="/sass/main.css">
+  <link rel="stylesheet" href="/calculator-app-main/sass/main.css">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
   <title>Frontend Mentor | Calculator app</title>
-  <script defer src="/js/script.js"></script>
+  <script defer src="/calculator-app-main/js/script.js"></script>
 </head>
 <body class="theme0">
 <main class="calc">
