--- a/calculator-app-main/index.html
+++ b/calculator-app-main/index.html
@@ -69,7 +69,7 @@
 
   
   <footer class="attribution">
-    Coded by <a href="#">Manish</a>.
+    Coded by <a href="https://github.com/Manish-d-art">Manish</a>.
   </footer>
 </body>
 </html>
